<resources>
    <string name="app_name">LoL Balance</string>
    <string name="friends_list_header">Friends List</string>
    <string name="verses_title">VS</string>
    <string name="team_1">Team 1</string>
    <string name="team_2">Team 2</string>
    <string name="strength">Strength:</string>
    <string name="add_hint">Enter your friend\'s League of Legends Summoner Name</string>
    <string name="select_hint">Tap players to balance them.</string>
    <string name="done">DONE</string>
    <string name="add">ADD</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="next">Next</string>
    <string name="replaceable">&lt;XXXX&gt;</string>
    <string name="confirm_hint">Are you sure you want to delete &lt;XXXX&gt;</string>
    <string name="button_yes">YES</string>
    <string name="button_no">NO</string>
    <string name="balance">Balance!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading_text">Waiting for League of Legends server</string>
</resources>
